0023972: Exception thrown when intersecting two cones

DRAW command and test case for issue CR23972